# SB1_NoticeBoard

./: pyproject.toml
announcements/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
announcements/migrations/: 0001_initial.py
announcements/templates/announcements/: announcement_confirm_delete.html  announcement_detail.html  announcement_form.html  announcement_list.html  base.html  comments_form.html
announcements/templates/announcements/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token_alter_user_image.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  user_form.html
